# cowtools

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
src/: __init__.py
src/cowtools/: __init__.py  __main__.py  data_tools.py  jobqueue.py  utils.py
src/cowtools/datatools/: __init__.py  datatools.py
src/cowtools/jobqueue/: __init__.py  jobqueue.py
src/cowtools/plotting/: __init__.py  plotting.py
tests/: test_basic.py  test_plotting.py
tests/resources/: file1.txt
