[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cowtools"
description = "Convenience tools for physics analyses with the University of Wisconsin-Madison Analysis Facility"
readme = "README.md"
version = "1.1"
requires-python = ">=3.6.8"
authors = [
    { name = "Ryan Simeon", email = "rsimeon@wisc.edu" }
]
maintainers = [
    { name = "Ryan Simeon", email = "rsimeon@wisc.edu" }
]
dependencies = [
    "dask_jobqueue>=0.8.5",
    "dask>=2024.1.0",
    "setuptools>=68.1.2",
    "hist",
    "mplhep",
    "scipy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mpl"
]

dev = [
    "pytest",
    "pytest-mpl",
    "pre-commit",
    "nox"
]

[tool.ruff]
select = [
    "E","F", "W",
    "B",
    "I",
    "RUF",
    "UP",
]
